# clipit

./: .gitignore  DEV.md  README.md  RELEASE.md  check-style-and-types-and-tests.sh  check-style-and-types.sh  grabit.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
src/clipit/: __init__.py  cli.py  clipper.py  grabber.py
src/clipit/core/: __init__.py  downloader.py  extractor.py  image_processor.py  markdown_converter.py  misc.py  writer.py
src/clipit/grabbers/: __init__.py  base_grabber.py  reddit_grabber.py
src/grabit_lib/: __init__.py  cli.py  core.py  grabber.py  lib.py
src/grabit_lib/core/: __init__.py  downloader.py  dtos.py  extractor.py  markdown_converter.py  output_format.py  writer.py
src/grabit_lib/grabbers/: __init__.py  base_grabber.py  reddit_grabber.py
src/grabit_md/: __init__.py  cli.py  grabber.py
src/grabit_md/core/: __init__.py  downloader.py  dtos.py  extractor.py  misc.py  output_format.py  writer.py
src/grabit_md/grabbers/: __init__.py  base_grabber.py  reddit_grabber.py
tests/: test_cli_integration.py  test_file_outputs.py  test_image_processor.py  test_markdown_conversion.py  test_output_formats_selection.py
